--- a/pages/More/Wiki.css
+++ b/pages/More/Wiki.css
@@ -200,11 +200,11 @@ body {
 
 /* BARRA DE BUSCA EXPANDIDA */
 .search-container {
-    flex-grow: 1; position: relative; max-width: 400px; 
+    flex-grow: 1; position: relative; width: 600px; 
 }
 
 #search-bar {
-    width: 100%; padding: 8px 8px 8px 40px; border-radius: 20px;
+    width: 100$; padding: 8px 8px 8px 40px; border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.1); border: 1px solid var(--primary-color);
     color: var(--text-color); font-size: 1em; transition: background-color 0.3s;
 }
