--- a/pages/More/Wiki.css
+++ b/pages/More/Wiki.css
@@ -200,7 +200,7 @@ body {
 
 /* BARRA DE BUSCA EXPANDIDA */
 .search-container {
-    flex-grow: 1; position: relative; width: 600px; 
+    flex-grow: 1; position: relative; min-width: 600px; 
 }
 
 #search-bar {
